--- a/package.json
+++ b/package.json
@@ -7,12 +7,24 @@
     "test": "jest"
   },
   "devDependencies": {
-    "jest": "^29.6.1",
     "@babel/core": "^7.21.8",
     "@babel/preset-env": "^7.21.5",
     "@babel/register": "^7.21.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^29.5.0"
+    "babel-jest": "^29.5.0",
+    "jest": "^29.6.1",
+    "typescript": "^5.8.2",
+    "@eslint/js": "^9.21.0",
+    "@types/jest": "^29.5.14",
+    "@typescript-eslint/eslint-plugin": "^8.25.0",
+    "@typescript-eslint/parser": "^8.25.0",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-prettier": "^5.2.3",
+    "globals": "^16.0.0",
+    "prettier": "^3.5.2",
+    "ts-jest": "^29.3.0",
+    "typescript-eslint": "^8.25.0"
   },
   "author": "Maleesha Gimshan (https://github.com/maleeshagimshan98)",
   "license": "MIT",
