modified the typescript and prettierrc, and gitignore files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "outDir": "dist" /* Output compiled files to 'dist' */,
     "allowJs": false /* Don't allow JavaScript files in the project */,
     "resolveJsonModule": true /* Allow importing JSON files */,
+    "declaration": true /* Generate .d.ts files for types */,
 
     /* 💡 Strict Type Checking */
     "strict": true /* Enable all strict type checking */,
@@ -33,8 +34,8 @@
     "noUncheckedIndexedAccess": true /* Ensure array/indexed types include 'undefined' */,
 
     /* 💡 Compilation Settings */
-    "noEmit": true /* Don't output compiled files (useful for linting) */
+    "noEmit": false /* Don't output compiled files (useful for linting) */
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist", "build"]
+  "exclude": ["node_modules", "dist", "build", "test"]
 }
