--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@maleeshagimshan98/vuex-pagination-wrapper",
-  "version": "1.3.0",
+  "name": "infinite-paginated-state",
+  "version": "1.3.1",
   "description": "Wrapper object to be used for managing paged data easily in Vue.js",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
